k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mongo
          image: mongo:4.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: keyfile
              mountPath: /etc/mongo-keyfile
              readOnly: true
          args:
            - "--bind_ip_all"
            - "--replSet"
            - "rs0"
            - "--auth"
            - "--keyFile"
            - "/etc/mongo-keyfile/keyfile"
      volumes:
        - name: keyfile-secret
          secret:
            secretName: mongo-credentials
            items:
              - key: keyfile
                path: keyfile
        - name: keyfile
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 150Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: mongo
