k8s/tinyurl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyurl-app
  labels:
    app: tinyurl-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tinyurl-app
  template:
    metadata:
      labels:
        app: tinyurl-app
    spec:
      containers:
        - name: tinyurl-app
          image: gcr.io/useful-art-450916-u3/tinyurl:latest
          ports:
            - containerPort: 8080
---
# Service to expose the TinyURL app
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-service
  labels:
    app: tinyurl-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: tinyurl-app
