k8s/tinyurl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyurl-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinyurl-service
                port:
                  number: 8080
          - path: /swagger-ui.html
            pathType: Exact
            backend:
              service:
                name: tinyurl-service
                port:
                  number: 8080
          - path: /swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: tinyurl-service
                port:
                  number: 8080
